[package]
name = "broom"
description = "Sort and clean your files like screenshots on your desktop your way"
repository = "https://github.com/roma-glushko/broom"
categories = ["command-line-interface", "command-line-utilities"]
authors = ["Roman Hlushko <roman.glushko.m@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_yaml = "0.9.21"
rand = "0.8.5"
dirs = "5.0.1"
log = { version = "0.4.20", features = ["serde"] }
notify = "6.1.1"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.31"
